--- a/ETC/자바 버전 변경하기.md
+++ b/ETC/자바 버전 변경하기.md
@@ -96,7 +96,7 @@ source ~/.zshrc
 - 자바 버전 변경이 완료 되었는지 확인해본다.
 
 ```shell
-> java version
+> java -version
 openjdk version "1.8.0_292"
 OpenJDK Runtime Environment (AdoptOpenJDK)(build 1.8.0_292-b10)
 OpenJDK 64-Bit Server VM (AdoptOpenJDK)(build 25.292-b10, mixed mode)
